# NFT-Marketplace-API

./: Cargo.toml  README.md
src/: main.rs  models.rs
src/services/: fetch_data.rs
