[package]
name = "nft-marketplace-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
futures-util = "0.3.28"
mongodb = "2.6.0"
serde = "1.0.174"
tokio = { version = "1.29.1", features = ["full"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

